Fix faded content color contrast in dark mode

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 :root.dark {
     --main-bg-color: #121212;
     --main-text-color: #cff7ff;
-    --faded-content-color: #466368;
+    --faded-content-color: #668388;
     --normal-btn-color: #012f4f;
     --normal-btn-color-hover: #113f5f;
     --normal-btn-color-active: #214f6f;
